# core

./: .appveyor.yml  CMakeLists.txt  README.md
cmake/: Findcatch.cmake
source/corvusoft/core/: byte.hpp  log_level.hpp  settings.cpp  settings.hpp
source/corvusoft/core/detail/: settings_impl.hpp
test/integration/: CMakeLists.txt
test/integration/source/settings/: destructor.cpp  erase.cpp  get.cpp  has.cpp  set.cpp
test/unit/: CMakeLists.txt
test/unit/source/: byte.cpp  settings.cpp
test/unit/source/byte/: make_bytes.cpp  make_string.cpp
test/unit/source/settings/: constructor.cpp  destructor.cpp  erase.cpp  get.cpp  has.cpp  set.cpp
tool/cppcheck/: options
tool/cppclean/: options
